--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
-        "daisyui": "^4.10.2"
+        "daisyui": "^4.10.2",
+        "emoji-picker-react": "^4.9.2"
     }
 }
