--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.3",
         "daisyui": "^4.10.2",
-        "emoji-picker-react": "^4.9.2"
+        "emoji-picker-react": "^4.9.2",
+        "react-markdown": "^9.0.1"
     }
 }
